# GachaEstimator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cmake.bat
source/: CMakeLists.txt  Gacha.cpp  Gacha.h  GachaOptions.cpp  GachaOptions.h  GachaResult.cpp  GachaResult.h  main.cpp
source/support/: InputParser.h
test/: test_arknights.bat  test_genshin.bat
